Fixed: IMEI returning null in IMEIActivity.

--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -11,9 +11,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.anshulvyas.napp.ContactsActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Contacts activity"/>
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Contacts activity"/>-->
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/list_contacts"/>
 
 </RelativeLayout>
