--- a/app/src/main/res/layout/activity_imei.xml
+++ b/app/src/main/res/layout/activity_imei.xml
@@ -18,11 +18,13 @@
         android:id="@+id/tv_header"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tv_imei"
         android:layout_below="@+id/tv_header"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:padding="16dp"
+        android:layout_centerInParent="true"
+        android:textSize="10pt"
+        android:textColor="@color/colorPrimaryText"/>
 
 </RelativeLayout>
