--- a/app/src/main/res/layout/activity_all_contacts.xml
+++ b/app/src/main/res/layout/activity_all_contacts.xml
@@ -36,7 +36,7 @@
         android:layout_alignLeft="@+id/tv_contacts_header"
         android:layout_alignRight="@+id/tv_contacts_header"
         android:layout_below="@+id/tv_contacts_header"
-        android:gravity="center"
+        android:gravity="left"
         android:text="TextView" />
 
 
