--- a/app/src/main/res/layout/activity_gps.xml
+++ b/app/src/main/res/layout/activity_gps.xml
@@ -14,6 +14,18 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="GPS activity"/>
+        android:text="GPS activity"
+        android:id="@+id/tv_gps_header"/>
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_gps"
+        android:layout_below="@+id/tv_gps_header"
+        android:padding="16dp"
+        android:layout_centerInParent="true"
+        android:textSize="10pt"
+        android:textColor="@color/colorPrimaryText"/>
 
 </RelativeLayout>
