--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:layout_below="@+id/button_contacts"/>
+        android:id="@+id/byte_address"
+        android:layout_centerVertical="true"/>
 
     <Button
         android:layout_width="wrap_content"
